<resources>
    <string name="app_name">MTB: Norming</string>

    <string name="cancel">Cancel</string>
    <string name="confirm_log_out_title">Confirm log out</string>
    <string name="confirm_log_out_message">Are you sure you would like to log out of this study?</string>
    <string name="yes_log_out">Yes, log out</string>
    <string name="current_activities">current activities</string>
    <string name="due_on">Due on: %1$s</string>
    <string name="opens">Opens: %1$s</string>
    <string name="number_minutes">%1$d min</string>
    <string name="good_to_go">Good to go!</string>
    <string name="funder">Funder</string>
    <string name="institution">Institution</string>
    <string name="investigator">Investigator</string>
    <string name="principal_investigator">Principal Investigator</string>
    <string name="irb_ethics_board">"IRB/Ethics Board of Record"</string>
    <string name="study_support">"Study Support"</string>
    <string name="thank_you">Thank you for your patience. \n\n You may exit the app</string>
    <string name="hang_tight">Hang tight...</string>
    <string name="please_dont_close">Please don\'t close the app quite yet, we\'re uploading your contributions to the cloud.</string>
    <string name="title_home">Home</string>
    <string name="title_past_activities">Past Activities</string>
    <string name="title_study_info">Study Info</string>
    <string name="title_account">Account</string>
    <string name="profile">profile</string>
    <string name="settings">settings</string>
    <string name="thank_you_for_your_contributions">Thank you for your contributions!</string>
    <string name="minutes">minutes</string>
    <string name="nice_you_re_all_up_to_date">nice, you\'re all up to date</string>
    <string name="about_the_study">about the study</string>
    <string name="contact_and_support">contact &amp; support</string>
    <string name="general_support">General Support</string>
    <string name="for_general_questions">For general questions about the study or to withdraw from the study, please contact:</string>
    <string name="to_withdraw">To <b>withdraw from this study</b>, you’ll need the following info:</string>
    <string name="to_withdraw_account">To <b>withdraw</b> from this study, please contact your Study Contact from the <u><b>Study Info page.</b></u></string>
    <string name="study_id">&lt;b>Study ID:&lt;/b> %1$s</string>
    <string name="study_id_label">Study ID:</string>
    <string name="participant_id">&lt;b>Participant ID:&lt;/b> %1$s</string>
    <string name="participant_id_label">Participant ID:</string>
    <string name="phone_label">Phone #:</string>
    <string name="version_label">Version:</string>
    <string name="registration_phone_number">&lt;b>Registration Phone Number:&lt;/b> %1$s</string>
    <string name="your_participant_rights">Your Participant Rights</string>
    <string name="for_questions">For questions about your rights as a research participant, please contact :</string>
    <string name="logout">Log out</string>

</resources>