<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp"
    android:background="@color/backgroundGrey"
    tools:context=".ui.study.SupportFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="32dp"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Sage.H3"
                android:text="@string/general_support"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Sage.P5"
                android:text="@string/for_general_questions"/>
            <LinearLayout
                android:id="@+id/support_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="32dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_rect_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Sage.P5"
                    android:text="@string/to_withdraw"/>
                <TextView
                    android:id="@+id/study_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textAppearance="@style/TextAppearance.Sage.P5"
                    android:text="@string/study_id"/>
                <TextView
                    android:id="@+id/participant_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Sage.P5"
                    android:text="@string/participant_id"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/registration_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Sage.P5"
                    android:text="@string/registration_phone_number"
                    android:visibility="gone"/>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@color/textColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Sage.H3"
                android:text="@string/your_participant_rights"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Sage.P5"
                android:text="@string/for_questions"/>
            <LinearLayout
                android:id="@+id/irb_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>
</ScrollView>